# esp_idf_lvgl_foc_knob

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/espressif__arduino-foc/: .component_hash  CHANGELOG.md  CMakeLists.txt
components/espressif__arduino-foc/src/: BLDCMotor.cpp  BLDCMotor.h
components/espressif__arduino-foc/src/common/base_classes/: BLDCDriver.h  FOCMotor.h
components/espressif__arduino-foc/src/communication/: Commander.h  SimpleFOCDebug.h  StepDirListener.h
components/espressif__arduino-foc/src/current_sense/: InlineCurrentSense.h  LowsideCurrentSense.h
components/espressif__arduino-foc/src/sensors/: Encoder.h  GenericSensor.h  HallSensor.h
components/espressif__esp_lvgl_port/: idf_component.yml
main/: CMakeLists.txt  idf_component.yml  main.c  readme.md  root.html
main/dial/: dial.cpp  dial.h
main/dial_power/: dial_power.c  dial_power.h
main/display/: display.c  display.h
main/foc/: foc.cpp  foc.h
main/nvs_data/: nvs_data.c  nvs_data.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/fonts/: ui_font_SmileySansOblique16.c  ui_font_SmileySansOblique20.c
main/ui/images/: ui_img_bg1_png.c  ui_img_bg_anime_png.c  ui_img_ble_png.c  ui_img_copy_png.c  ui_img_customize_png.c  ui_img_dial_png.c  ui_img_home_page_png.c  ui_img_key_left_right_png.c  ui_img_l_r_png.c  ui_img_left_right_png.c  ui_img_light_png.c  ui_img_music_png.c  ui_img_pc_png.c  ui_img_pointer_png.c  ui_img_power_png.c  ui_img_poweroff_png.c  ui_img_screenlocklandscape_png.c  ui_img_screenrotation_png.c  ui_img_set_png.c  ui_img_setting_png.c  ui_img_sleep_png.c  ui_img_up_dowm_png.c  ui_img_video_png.c  ui_img_volume_png.c  ui_img_wheel_png.c  ui_img_wifilogo_png.c
main/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screnn3.c  ui_setting.c
main/usb_device/: esp_ble_hid.c  esp_ble_hid.h  esp_hid_gap.c  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h  usb_device.c  usb_device.h
main/wifi/: wifi_config.c  wifi_config.h
(+15 files in other folders)
